@@ -400,10 +400,10 @@ bool CD3D8Driver::initDriver(const core::dimension2d<u32>& screenSize,
 
 //! applications must call this method before performing any rendering. returns false if failed.
 bool CD3D8Driver::beginScene(bool backBuffer, bool zBuffer, SColor color,
-		void* windowId, core::rect<s32>* sourceRect)
+		const SExposedVideoData& videoData, core::rect<s32>* sourceRect)
 {
-	CNullDriver::beginScene(backBuffer, zBuffer, color, windowId, sourceRect);
-	WindowId = windowId;
+	CNullDriver::beginScene(backBuffer, zBuffer, color, videoData, sourceRect);
+	WindowId = (HWND)videoData.D3D8.HWnd;
 	SceneSourceRect = sourceRect;
 
 	if (!pID3DDevice)
@@ -412,8 +412,7 @@ bool CD3D8Driver::beginScene(bool backBuffer, bool zBuffer, SColor color,
 	HRESULT hr;
 	if (DeviceLost)
 	{
-#if defined( _IRR_XBOX_PLATFORM_)
-#else
+#ifndef _IRR_XBOX_PLATFORM_
 		if(FAILED(hr = pID3DDevice->TestCooperativeLevel()))
 		{
 			if (hr == D3DERR_DEVICELOST)
@@ -480,7 +479,7 @@ bool CD3D8Driver::endScene()
 		sourceRectData.bottom = SceneSourceRect->LowerRightCorner.Y;
 	}
 
-	hr = pID3DDevice->Present(srcRct, NULL, (HWND)WindowId, NULL);
+	hr = pID3DDevice->Present(srcRct, NULL, WindowId, NULL);
 
 	if (SUCCEEDED(hr))
 		return true;
